...
            android:layout_height="24dp"
            app:tint="@color/darkbrown"
            android:src="@drawable/search" />


        <EditText
            android:id="@+id/searchEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:hint="Search"
            android:textColor="@color/darkbrown"
...
            android:src="@drawable/home1"
            android:scaleType="centerInside"
            app:tint="@color/darkbrown"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/nav_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/search2"
            android:scaleType="centerInside"
            app:tint="@color/darkbrown"
...
