...
            android:textSize="14sp"
            android:layout_gravity="end"
            android:layout_marginBottom="24dp" />

        <!-- Log In Button -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Log in"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/lightpink"
...
