...
                    android:src="@drawable/camera"
                    app:tint="@color/pink"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Socially"
                    android:textSize="20sp"
                    android:textColor="@color/pink"
                    android:textStyle="bold"
...
